--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "commander": "^10.0.1",
     "inquirer": "^9.2.7",
     "program": "^1.0.0"
+  },
+  "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "semantic-release": "^21.0.3"
   }
 }
